--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   "devDependencies": {
     "file-loader": "^3.0.1",
     "url-loader": "^1.1.2"
+  },
+  "engines": {
+    "node": "11.6.0"
   }
 }
